--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="register">Register</string>
     <string name="nom">Nom</string>
     <string name="preu">Preu</string>
+    <string name="del">DEL</string>
+    <string name="upd">UPD</string>
 </resources>
